add transaction and minting

--- a/src/nami-js/package.json
+++ b/src/nami-js/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nami-js",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "nami.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^9.1.2",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3", 
+    "react-datetime-picker": "^3.4.3"
+
   }
 }
