--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "@emurgo/cip14-js": "^3.0.1",
     "@headlessui/react": "^1.4.1",
     "autoprefixer": "^10.3.4",
+    "buffer": "^6.0.3",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash.clonedeep": "^4.5.0",
     "react": "^17.0.2",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
-    "buffer": "^6.0.3",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.0",
     "svg-url-loader": "^7.1.1"
